20251010_daily_arXiv_CV_update

--- a/arxiv/2025_10_arxiv.html
+++ b/arxiv/2025_10_arxiv.html
@@ -47,7 +47,7 @@
 <p class="p3"><a href="https://arxiv.org/abs/2509.26261">https://arxiv.org/abs/2509.26261</a><span class="s2"> Why is topology hard to learn?</span></p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.26596">https://arxiv.org/abs/2509.26596</a></span> Orbital altermagnetism on the kagome lattice and possible application to AV3Sb5 *** (Rafael M. Fernandes)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.26620">https://arxiv.org/abs/2509.26620</a></span> Amplified response of cavity-coupled quantum-critical systems (Shouvik Sur, Silke Paschen, Qimiao Si)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.25322">https://arxiv.org/abs/2509.25322</a></span> The Sound of Electrons Shattering: Current Noise Composition Laws for Electron Fractionalization ***** (Adarsh S. Patri,1, 2 Josephine J. Yu,3 Yi-Ming Wu,4 T. Senthil,2 and Hart Goldman)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.25322">https://arxiv.org/abs/2509.25322</a></span> The Sound of Electrons Shattering: Current Noise Composition Laws for Electron Fractionalization ***** (Adarsh S. Patri, 2 Josephine J. Yu, Yi-Ming Wu, T. Senthil, Hart Goldman)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.26638">https://arxiv.org/abs/2509.26638</a></span> Intrinsic Nernst Effect from Berry Curvature in Superconductors</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.25316">https://arxiv.org/abs/2509.25316</a></span> Topologicalnon-AbelianGauge Structures inCayley-SchreierLattices</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.25635">https://arxiv.org/abs/2509.25635</a></span> Quantum geometric origins of the orbital degrees of freedom of hybrid bosonic quasiparticles in magnetic systems</p>
@@ -77,6 +77,69 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.01626">https://arxiv.org/abs/2510.01626</a></span> Classification of Thouless pumps with non-invertible symmetries and implications for Floquet phases (Aditi Mitra)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.01738">https://arxiv.org/abs/2510.01738</a></span> Hopf symmetry-protected topological phase at the intersection of magnetic and spin loop-current order</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.01909">https://arxiv.org/abs/2510.01909</a></span> Strong-coupling functional renormalization group: Nagaoka ferromagnetism and non-Fermi liquid physics in the Hubbard model at U= ∞ (Peter Kopietz)</p>
+<br>
+<p class="p1">20251006</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.03018">https://arxiv.org/abs/2510.03018</a></span> Modeling Quantum Geometry for Fractional Chern Insulators with unsupervised learning</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.02429">https://arxiv.org/abs/2510.02429</a></span> Uncovering origins of heterogeneous superconductivity in La3Ni2O7 using quantum sensors (N. Y. Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.02644">https://arxiv.org/abs/2510.02644</a></span> Ginzburg-Landau theory of spin pumping through an antiferromagnetic layer near the Néel temperature</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.02451">https://arxiv.org/abs/2510.02451</a></span> Slow-phonon control of spin Edelstein effect in Rashba d-wave altermagnets</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.02452">https://arxiv.org/abs/2510.02452</a></span> Spin polarization engineering in d-wave altermagnets</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.02444">https://arxiv.org/abs/2510.02444</a></span> Four Moiré materials at One Magic Angle in Helical Quadrilayer Graphene ***** (Manato Fujimoto, Naoto Nakatsuji, Ashvin Vishwanath, Patrick Ledwith)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.02661">https://arxiv.org/abs/2510.02661</a></span> Classification of electromagnetic responses by quantum geometry ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.02961">https://arxiv.org/abs/2510.02961</a></span> Percolation and criticality of systems with competing interactions on Bethe lattices: limitations and potential strengths of cluster schemes ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.02474">https://arxiv.org/abs/2510.02474</a></span> Vestigial pairing from fluctuating magnetism and triplet superconductivity (Mathias S. Scheurer)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.02413">https://arxiv.org/abs/2510.02413</a></span> Unusual spin-triplet superconductivity in monolayer graphene</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.02559">https://arxiv.org/abs/2510.02559</a></span> Learning Microswimmer Collision Dynamics and Predicting Diffusivities using a Neural-Network-Assisted Boltzmann Approach (Haruki Hayano, Akira Furukawa, Kang Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.19436">https://arxiv.org/abs/2503.19436</a></span> Floquet-Nambu theory of electron quantum optics with superconductors</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.01249">https://arxiv.org/abs/2504.01249</a></span> Hydrodynamics of the electronic Fermi liquid: a pedagogical overview ***</p>
+<p class="p2"><br></p>
+<p class="p1">20251007</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.04132">https://arxiv.org/abs/2510.04132</a></span> Ground state and excitations of quasiperiodic 1D narrow-band moir´e systems – a mean field approach</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.04319">https://arxiv.org/abs/2510.04319</a></span> Braids and Beams: Exploring Fractional Statistics with Mesoscopic Anyon Colliders (Bertrand I. Halperin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.03404">https://arxiv.org/abs/2510.03404</a></span> A Holographic prescription for generalized Schwinger-Keldysh contours</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.04164">https://arxiv.org/abs/2510.04164</a></span> Clifford Circuits Augmented Grassmann Matrix Product States</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.04253">https://arxiv.org/abs/2510.04253</a></span> Operational Quasiprobability in Quantum Thermodynamics: Work Extraction by Coherence and Non-joint Measurability</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.04453">https://arxiv.org/abs/2510.04453</a></span> Lov´asz Meets Lieb-Schultz-Mattis: Complexity in Approximate Quantum Error Correction</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.04959">https://arxiv.org/abs/2510.04959</a></span> Fermionic influence superoperator for transport through Majorana zero modes</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.03889">https://arxiv.org/abs/2510.03889</a></span> Lattice Translation Modulated Symmetries and TFTs</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.03967">https://arxiv.org/abs/2510.03967</a></span> Higher-form entanglement asymmetry and topological order (Taylor L. Hughes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.04830">https://arxiv.org/abs/2510.04830</a></span> Anyon interactions in the Chern–Simons–Landau–Ginzburg model of the fractional quantum Hall effect</p>
+<p class="p2"><br></p>
+<p class="p1">20251008</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.05479">https://arxiv.org/abs/2510.05479</a></span> Cored product codes for quantum self-correction in three dimensions (Norman Y. Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.06089">https://arxiv.org/abs/2510.06089</a></span> Encoding a topological gauge theory on a ring-shaped Raman-coupled Bose gas</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.05230">https://arxiv.org/abs/2510.05230</a></span> Boundary criticality in two-dimensional correlated topological superconductors (Yang Ge, Huan Jiang, Hong Yao, Shao-Kai Jian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.05723">https://arxiv.org/abs/2510.05723</a></span> Six loop critical exponent analysis for Lee-Yang and percolation theory (J.A. Gracey)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.05897">https://arxiv.org/abs/2510.05897</a></span> Hybrid quantum-classical analog simulation of two-dimensional Fermi-Hubbard models with neutral atoms</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.05209">https://arxiv.org/abs/2510.05209</a></span> Vestigial d-wave charge-4e Superconductivity from Bidirectional Pair Density Waves (Yuxuan Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.05234">https://arxiv.org/abs/2510.05234</a></span> Emergence of nematic loop-current bond order in vanadium Kagome metals (Hae-Young Kee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.06086">https://arxiv.org/abs/2510.06086</a></span> Identifying chiral topological order in microscopic spin models by modular commutator</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.01768">https://arxiv.org/abs/2510.01768</a></span> Dimers for Relativistic Toda Models with Reflective Boundaries (Kimyeong Lee)</p>
+<p class="p2"><br></p>
+<p class="p1">20251009</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.06338">https://arxiv.org/abs/2510.06338</a></span> Beyond the non-Hermitian skin effect: scaling-controlled topology from Exceptional-Bound Bands (Ching Hua Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.06508">https://arxiv.org/abs/2510.06508</a></span> Application of deep neural networks for computing the renormalization group flow of the two-dimensional ϕ4 field theory ***** (Yi-Zhuang You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.06451">https://arxiv.org/abs/2510.06451</a></span> Kekul´e Superconductivity in Twisted Magic Angle Bilayer Graphene</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.07029">https://arxiv.org/abs/2510.07029</a></span> Noninteracting tight-binding models for Fock parafermions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.06555">https://arxiv.org/abs/2510.06555</a></span> Twisted locality-preserving automorphisms, anomaly index, and generalized Lieb-Schultz-Mattis theorems with anti-unitary symmetries ***** (Ruizhi Liu, Jinmin Yi, Liujun Zou)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.06313">https://arxiv.org/abs/2510.06313</a></span> Superconductivity of Incoherent Electrons near the Relativistic Mott Transition in Twisted Dirac Materials ***** (Mathias S. Scheurer, Daniel E. Sheehy, Jörg Schmalian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.07023">https://arxiv.org/abs/2510.07023</a></span> Simulating Topological Order on Quantum Processors (Michael Knap, Frank Pollmann)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.17573">https://arxiv.org/abs/2507.17573</a></span> Renormalization group for eﬀective field theories: cutoﬀ schemes and universality</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.07017">https://arxiv.org/abs/2510.07017</a></span> Lectures on entanglement, von Neumann algebras, and emergence of spacetime ***** (Hong Liu)</p>
+<p class="p2"><br></p>
+<p class="p1">20251010</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.07373">https://arxiv.org/abs/2510.07373</a></span> Learning to predict superconductivity (Eun-Ah Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.07381">https://arxiv.org/abs/2510.07381</a></span> Strong interlayer coupling and chiral flat-band cascades in twisted bilayer gratings *** (Daegwang Choi, Chan Bin Bark, Seik Pak, Moon Jip Park, Su-Hyun Gong)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.08490">https://arxiv.org/abs/2510.08490</a></span> Fractional quantum Hall states under density decoherence **** (Zijian Wang, Ruihua Fan, Tianle Wang, Samuel J. Garratt, Ehud Altman)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.07383">https://arxiv.org/abs/2510.07383</a></span> Emergent spacetime supersymmetry at 2D fractionalized quantum criticality ***** (Shao-Kai Jian, Hong Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.08056">https://arxiv.org/abs/2510.08056</a></span> Local active error correction from simulated confinement ***** (Ethan Lake)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.07385">https://arxiv.org/abs/2510.07385</a></span> Quantum Resources in Non-Abelian Lattice Gauge Theories: Nonstabilizerness, Multipartite Entanglement, and Fermionic Non-Gaussianity (Philipp Hauke)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.07408">https://arxiv.org/abs/2510.07408</a></span> TASI LECTURES ON TOPOLOGICAL FIELD THEORIES AND DIFFERENTIAL COHOMOLOGY *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.07506">https://arxiv.org/abs/2510.07506</a></span> Efficiency of the superconducting diode effect of pair-density-wave states in two-dimensional d-wave altermagnets (Hermann Freire)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.07583">https://arxiv.org/abs/2510.07583</a></span> Quantizing Bosonized Fermi Surfaces ***** (Sihan Chen, Luca V. Delacr´etaz)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.08690">https://arxiv.org/abs/2412.08690</a></span> Lectures in Quantum Gravity *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.08503">https://arxiv.org/abs/2510.08503</a></span> Hardness of recognizing phases of matter (Thomas Schuster, Dominik Kufel, Norman Y. Yao, Hsin-Yuan Huang)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2506.16480">https://arxiv.org/abs/2506.16480</a><span class="s3"> The Quantum Formalism Revisited</span></p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
