--- a/index.html
+++ b/index.html
@@ -92,18 +92,20 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	<div class="cvitemize"> <a href="#publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Recent News</a> </div>
 	<ul><!--<li>Now I am looking for next position starting in (maybe) September 2023. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.</li>
 	-->
+			<li><b>[Mar. 2025]</b> My paper <a href="https://journals.aps.org/prb/abstract/10.1103/yrkv-42wd" style="font-style: italic;">"Fermi surface bosonization for non-Fermi liquids"</a> has been published in <span style="font-style: italic;">Physical Review B</span> as a regular article</span>.
+			</li>
 			<li><b>[Oct. 2025]</b> <a href="#publication" style="text-decoration:none;color:var(--font-color)">My recent paper</a> <a href="https://journals.aps.org/prb/accepted/10.1103/n4vy-dl5v" style="font-style: italic;">"Beyond one-loop: higher-order effects on Gross-Neveu-Yukawa tensorial criticality" (arXiv:2506.20710)"</a> has been accepted for publication as a Regular Article in <span style="font-style: italic;">Physical Review B</span>!
 			</li>
-			<li><b>[Sep. 2025]</b> <a href="#publication" style="text-decoration:none;color:var(--font-color)">My recent paper</a> <a href="https://journals.aps.org/prb/accepted/10.1103/yrkv-42wd" style="font-style: italic;">"Fermi surface bosonization for non-Fermi liquids (arXiv:2306.14955)"</a> has been finally accepted for publication as a Regular Article in <span style="font-style: italic;">Physical Review B</span>!
+			<li><b>[Sep. 2025]</b> <a href="#publication" style="text-decoration:none;color:var(--font-color)">My paper</a> <a href="https://journals.aps.org/prb/accepted/10.1103/yrkv-42wd" style="font-style: italic;">"Fermi surface bosonization for non-Fermi liquids (arXiv:2306.14955)"</a> has been finally accepted for publication as a Regular Article in <span style="font-style: italic;">Physical Review B</span>!
 			</li>
 			<li><b>[Sep. 2025]</b> I joined <a href="https://sites.google.com/view/han-ma" style="font-style: italic;">Professor Han Ma's group</a>, at <span style="font-style: italic;">Stony Brook University, Stony Brook, USA</span>.
 			</li>
 			<li><b>[Jun. 2025]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2506.20710" style="font-style: italic;">"Beyond one-loop: higher-order effects on Gross-Neveu-Yukawa tensorial criticality (arXiv:2506.20710)"</a> has been posted on arXiv!
 			</li>
-			<li><b>[Mar. 2025]</b> I have given a <a href="#contributed" style="text-decoration:none;color:var(--font-color)">contributed talk</a> <a href="https://summit.aps.org/events/MAR-J25" style="font-style: italic;">"Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO}(N)$ spontaneous symmetry breaking" (2025/03/18 03:00 PM, Room 251A (Level 2))</a> at APS march meeting 2025, Anaheim, California, USA!
+			<li><b>[Mar. 2025]</b> I have given a <a href="#contributed" style="text-decoration:none;color:var(--font-color)">contributed talk</a> <a href="https://schedule.aps.org/smt/2025/events/MAR-J25/1" style="font-style: italic;">"Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO}(N)$ spontaneous symmetry breaking" (2025/03/18 03:00 PM, Room 251A (Level 2))</a> at APS march meeting 2025, Anaheim, California, USA!
 			</li><!--<li><b>[Mar. 2025]</b> I will give a <a href="#contributed" style="text-decoration:none;color:var(--font-color)">contributed talk</a> <a href="https://summit.aps.org/events/MAR-J25" style="font-style: italic;">"Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO}(N)$ spontaneous symmetry breaking" (2025/03/18 03:00 PM, Room 251A (Level 2))</a> at APS march meeting 2025, Anaheim, California, USA!
 			</li>-->
-			<li><b>[Mar. 2025]</b> My paper <a href="htthttps://link.aps.org/doi/10.1103/PhysRevB.111.115131" style="font-style: italic;">"Gross-Neveu-Yukawa SO(2) and SO(3) tensorial criticalit"</a> has been published in <span style="font-style: italic;">Physical Review B</span> as a regular article</span>.
+			<li><b>[Mar. 2025]</b> My paper <a href="htthttps://link.aps.org/doi/10.1103/PhysRevB.111.115131" style="font-style: italic;">"Gross-Neveu-Yukawa SO(2) and SO(3) tensorial criticality"</a> has been published in <span style="font-style: italic;">Physical Review B</span> as a regular article</span>.
 			</li>
 			<li><b>[Feb. 2025]</b> <a href="#publication" style="text-decoration:none;color:var(--font-color)">My recent paper</a> <a href="https://journals.aps.org/prb/accepted/5807cO2bMed1544a951571b6463c0aa5254a9b352" style="font-style: italic;">"Gross-Neveu-Yukawa SO(2) and SO(3) tensorial criticality (arXiv:2411.16842)"</a> has been accepted for publication as a Regular Article in <span style="font-style: italic;">Physical Review B</span>!
 			</li>
@@ -168,7 +170,7 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	<li><b>[Feb. 2023]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2302.07883" style="font-style: italic;">"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid (arXiv:2302.07883)"</a> has been posted on arXiv!
 	</li></ul>
 	</details><br>
-<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="CV/20251010_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2025/10/10)</a>
+<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="CV/20251014_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2025/10/14)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
@@ -219,18 +221,20 @@ Articles related to my works:
 					</li>
 					<li><div class="paper_title" style="display: flex;">
 				<span class="cvitem"><a href="https://journals.aps.org/prb/accepted/10.1103/yrkv-42wd" style="text-decoration:none;color:var(--font-color)">"Fermi Surface Bosonization for Non-Fermi Liquids"</a> <div class="bouncing-text" style="display: inline-block;">
-		  <div class="iPsign8" style="display: inline-block;">D</div>
-		  <div class="iPsign1" style="display: inline-block;float: left;">A</div>
-		  <div class="iPsign2" style="display: inline-block;float: left;">C</div>
-		  <div class="iPsign3" style="display: inline-block;float: left;">C</div>
-		  <div class="iPsign4" style="display: inline-block;float: left;">E</div>
-		  <div class="iPsign5" style="display: inline-block;float: left;">P</div>
-		  <div class="iPsign6" style="display: inline-block;float: left;">T</div>
-		  <div class="iPsign7" style="display: inline-block;float: left;">E</div>
-		  <div class="shadow"></div></span>
+		  <div class="Psign9" style="display: inline-block;">D</div>
+		  <div class="Psign1" style="display: inline-block;float: left;">P</div>
+		  <div class="Psign2" style="display: inline-block;float: left;">U</div>
+		  <div class="Psign3" style="display: inline-block;float: left;">B</div>
+		  <div class="Psign4" style="display: inline-block;float: left;">L</div>
+		  <div class="Psign5" style="display: inline-block;float: left;">I</div>
+		  <div class="Psign6" style="display: inline-block;float: left;">S</div>
+		  <div class="Psign7" style="display: inline-block;float: left;">H</div>
+		  <div class="Psign8" style="display: inline-block;float: left;">E</div>
+		  <div class="shadow"></div>
+								</span>
 						<span class="cvperiod"></span></div>
 						<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b>, <a href="https://scholar.google.com/citations?user=UwP0OJ8AAAAJ" style="text-decoration:none;color:var(--font-color)">F&eacute;lix Desrochers</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:var(--font-color)">Yong Baek Kim</a><br>
-						<a href="https://journals.aps.org/prb/accepted/10.1103/yrkv-42wd">Accepted in Phys. Rev. B</a> (<a href="https://arxiv.org/abs/2306.14955">arXiv:2306.14955</a>)<div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
+						<a href="https://journals.aps.org/prb/abstract/10.1103/yrkv-42wd">Phys. Rev. B <b>112</b>, 165116 (2025)</a> (<a href="https://arxiv.org/abs/2306.14955">arXiv:2306.14955</a>)<div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
 		  <label>
 		    <input type="checkbox">
 		    <!--<img style="float:right;border-radius: 3px;border: 1px solid transparent;border-color:black;background-color:#ffffff;" src="img/nonhermitian_Luttinger-Kondo.svg" alt="Phase diagram and RG flows of topological phase transition in line-nodal superconductor." width=30% >-->
