20251019_daily_arXiv_update

--- a/arxiv/2025_10_arxiv.html
+++ b/arxiv/2025_10_arxiv.html
@@ -140,6 +140,43 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.08690">https://arxiv.org/abs/2412.08690</a></span> Lectures in Quantum Gravity *****</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.08503">https://arxiv.org/abs/2510.08503</a></span> Hardness of recognizing phases of matter (Thomas Schuster, Dominik Kufel, Norman Y. Yao, Hsin-Yuan Huang)</p>
 <p class="p3"><a href="https://arxiv.org/abs/2506.16480">https://arxiv.org/abs/2506.16480</a><span class="s3"> The Quantum Formalism Revisited</span></p>
+<br>
+<p class="p1">20251013</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.09170">https://arxiv.org/abs/2510.09170</a></span> Altermagnetism and Superconductivity: A Short Historical Review *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.09565">https://arxiv.org/abs/2510.09565</a></span> Unveiling dynamical quantum error correcting codes via non-invertible symmetries</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.09234">https://arxiv.org/abs/2510.09234</a></span> Quantum fluctuation-induced first-order breaking of time-reversal symmetry in unconventional superconductors</p>
+<p class="p2"><br></p>
+<p class="p1">20251014</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.09749">https://arxiv.org/abs/2510.09749</a></span> Vari-Cool: a non-unitary quantum variational protocol for simulated cooling (Erez Berg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.10684">https://arxiv.org/abs/2510.10684</a></span> Integrable Model of a Superconductor with non-Fermi liquid and Mott Phases</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.11607">https://arxiv.org/abs/2510.11607</a></span> Flux confinement-deconfinement transition of dimer-loop models on three-dimensional bipartite lattices (Kedar Damle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.11431">https://arxiv.org/abs/2510.11431</a></span> A minimal and universal representation of fermionic wavefunctions (fermions = bosons + one) (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.11244">https://arxiv.org/abs/2510.11244</a></span> Hydrodynamic properties in soliton field theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.20015">https://arxiv.org/abs/2412.20015</a></span> A Family of Vertex Algebras from Argyres-Douglas Theory (Heeyeon Kim, Jaewon Song)</p>
+<p class="p2"><br></p>
+<p class="p1">20251015</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.10835">https://arxiv.org/abs/2510.10835</a></span> Error thresholds of toric codes with transversal logical gates (Eun-Ah Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.12127">https://arxiv.org/abs/2510.12127</a></span> Chern-Selective multi-valley Flat Bands in Twisted Mono-Bilayer and Mono-Trilayer MoTe2 (B. Andrei Bernevig, Jiabin Yu, Quansheng Wu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.12800">https://arxiv.org/abs/2510.12800</a></span> Prethermal gauge structure and surface growth in Z2 lattice gauge theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.12682">https://arxiv.org/abs/2510.12682</a></span> Possible Bose-Einstein condensation of magnons in a S = 5/2 honeycomb lattice (Heung-Sik Kim, Kwang-Yong Choi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.00825">https://arxiv.org/abs/2408.00825</a></span> Topological Phases of Many-Body Localized Systems: Beyond Eigenstate Order (Dominic V. Else)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.00301">https://arxiv.org/abs/2411.00301</a></span> Spin excitations of the Shastry-Sutherland model – altermagnetism and deconfined quantum criticality</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.11831">https://arxiv.org/abs/2510.11831</a></span> Non-perturbatively slow spread of quantum correlations in non-resonant systems (Andrew Lucas)</p>
+<p class="p2"><br></p>
+<p class="p1">20251016</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.13641">https://arxiv.org/abs/2510.13641</a></span> Momentum-Resolved Spectroscopy of Superconductivity with the Quantum Twisting Microscope</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.13098">https://arxiv.org/abs/2510.13098</a></span> Flat bands in condensed-matter systems— perspective for magnetism and superconductivity</p>
+<p class="p3"><a href="https://arxiv.org/abs/2510.12880">https://arxiv.org/abs/2510.12880</a><span class="s2"> The Kitaev-AKLT model</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.12981">https://arxiv.org/abs/2406.12981</a></span> Quantum geometry of bosonic Bogoliubov quasiparticles</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.13135">https://arxiv.org/abs/2510.13135</a></span> Bumblebee Gravity - Lessons from Perturbation Theory ***</p>
+<p class="p2"><br></p>
+<p class="p1">20251017</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.13960">https://arxiv.org/abs/2510.13960</a></span> Unconventional criticality in O(D)-invariant loop-constrained Landau theory</p>
+<p class="p3"><a href="https://arxiv.org/abs/2510.14784">https://arxiv.org/abs/2510.14784</a><span class="s2"> Topological bands in metals</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.13941">https://arxiv.org/abs/2510.13941</a></span> Diffeomorphism invariant tensor networks for 3d gravity</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.14593">https://arxiv.org/abs/2510.14593</a></span> Interplay of ferromagnetism, nematicity and Fermi surface nesting in kagome flat band (Hoi Chun Po)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.14813">https://arxiv.org/abs/2510.14813</a></span> Quantum Fisher Information as a Thermal and Dynamical Probe in Frustrated Magnets: Insights from Quantum Spin Ice (Chengkang Zhou, Zhengbang Zhou, F´elix Desrochers, Yong Baek Kim, Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2510.14259">https://arxiv.org/abs/2510.14259</a></span> Superconductivity in UTe2 from local noncentrosymmetricity</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
