--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	<div class="cvitemize"> <a href="#publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Recent News</a> </div>
 	<ul><!--<li>Now I am looking for next position starting in (maybe) September 2023. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.</li>
 	-->
-			<li><b>[Mar. 2025]</b> My paper <a href="https://journals.aps.org/prb/abstract/10.1103/yrkv-42wd" style="font-style: italic;">"Fermi surface bosonization for non-Fermi liquids"</a> has been published in <span style="font-style: italic;">Physical Review B</span> as a regular article</span>.
+			<li><b>[Oct. 2025]</b> My paper <a href="https://journals.aps.org/prb/abstract/10.1103/n4vy-dl5v" style="font-style: italic;">"Beyond one-loop calculation: Higher-order effects on Gross-Neveu-Yukawa tensorial criticality"</a> has been published in <span style="font-style: italic;">Physical Review B</span> as a regular article</span>.
+			</li>
+			<li><b>[Oct. 2025]</b> My paper <a href="https://journals.aps.org/prb/abstract/10.1103/yrkv-42wd" style="font-style: italic;">"Fermi surface bosonization for non-Fermi liquids"</a> has been published in <span style="font-style: italic;">Physical Review B</span> as a regular article</span>.
 			</li>
 			<li><b>[Oct. 2025]</b> <a href="#publication" style="text-decoration:none;color:var(--font-color)">My recent paper</a> <a href="https://journals.aps.org/prb/accepted/10.1103/n4vy-dl5v" style="font-style: italic;">"Beyond one-loop: higher-order effects on Gross-Neveu-Yukawa tensorial criticality" (arXiv:2506.20710)"</a> has been accepted for publication as a Regular Article in <span style="font-style: italic;">Physical Review B</span>!
 			</li>
@@ -170,7 +172,7 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	<li><b>[Feb. 2023]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2302.07883" style="font-style: italic;">"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid (arXiv:2302.07883)"</a> has been posted on arXiv!
 	</li></ul>
 	</details><br>
-<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="CV/20251014_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2025/10/14)</a>
+<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="CV/20251027_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2025/10/27)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
@@ -201,18 +203,20 @@ Articles related to my works:
 			  <div class="sign1" style="display: inline-block;float: left;">N</div>
 			  <div class="sign2" style="display: inline-block;float: left;">E</div>
 			  <div class="shadow"></div></div>&nbsp<a href="https://arxiv.org/abs/2506.20710" style="text-decoration:none;color:var(--font-color)">"Beyond one-loop: higher-order effects on Gross-Neveu-Yukawa tensorial criticality"</a> <div class="bouncing-text" style="display: inline-block;">
-		  <div class="iPsign8" style="display: inline-block;">D</div>
-		  <div class="iPsign1" style="display: inline-block;float: left;">A</div>
-		  <div class="iPsign2" style="display: inline-block;float: left;">C</div>
-		  <div class="iPsign3" style="display: inline-block;float: left;">C</div>
-		  <div class="iPsign4" style="display: inline-block;float: left;">E</div>
-		  <div class="iPsign5" style="display: inline-block;float: left;">P</div>
-		  <div class="iPsign6" style="display: inline-block;float: left;">T</div>
-		  <div class="iPsign7" style="display: inline-block;float: left;">E</div>
-		  <div class="shadow"></div></span>
+		  <div class="Psign9" style="display: inline-block;">D</div>
+		  <div class="Psign1" style="display: inline-block;float: left;">P</div>
+		  <div class="Psign2" style="display: inline-block;float: left;">U</div>
+		  <div class="Psign3" style="display: inline-block;float: left;">B</div>
+		  <div class="Psign4" style="display: inline-block;float: left;">L</div>
+		  <div class="Psign5" style="display: inline-block;float: left;">I</div>
+		  <div class="Psign6" style="display: inline-block;float: left;">S</div>
+		  <div class="Psign7" style="display: inline-block;float: left;">H</div>
+		  <div class="Psign8" style="display: inline-block;float: left;">E</div>
+		  <div class="shadow"></div>
+								</span>
 							<span class="cvperiod"></span></div>
 							<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b> and <a href="https://www.sfu.ca/physics/people/faculty/iherbut.html" style="text-decoration:none;color:var(--font-color)">Igor F. Herbut</a><br>
-							<a href="https://journals.aps.org/prb/accepted/10.1103/n4vy-dl5v">Accepted in Phys. Rev. B</a> (<a href="https://arxiv.org/abs/2506.20710">arXiv:2506.20710</a>)<div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
+							<a href="https://journals.aps.org/prb/abstract/10.1103/n4vy-dl5v">Phys. Rev. B <b>112</b>, 155161 (2025)</a> (<a href="https://arxiv.org/abs/2506.20710">arXiv:2506.20710</a>)<div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
 			  <label>
 			    <input type="checkbox">
 			  </label>
@@ -220,7 +224,7 @@ Articles related to my works:
 			</span></details></div>
 					</li>
 					<li><div class="paper_title" style="display: flex;">
-				<span class="cvitem"><a href="https://journals.aps.org/prb/accepted/10.1103/yrkv-42wd" style="text-decoration:none;color:var(--font-color)">"Fermi Surface Bosonization for Non-Fermi Liquids"</a> <div class="bouncing-text" style="display: inline-block;">
+				<span class="cvitem"><a href="https://journals.aps.org/prb/abstract/10.1103/yrkv-42wd" style="text-decoration:none;color:var(--font-color)">"Fermi Surface Bosonization for Non-Fermi Liquids"</a> <div class="bouncing-text" style="display: inline-block;">
 		  <div class="Psign9" style="display: inline-block;">D</div>
 		  <div class="Psign1" style="display: inline-block;float: left;">P</div>
 		  <div class="Psign2" style="display: inline-block;float: left;">U</div>
